---
source: compiler/toc-analysis/src/typeck/test.rs
expression: "\n    % Numerics\n    var r : real\n    var i : int\n    var n : nat\n\n    % Other scalars\n    var b : boolean\n\n    % Sized charseqs\n    var c : char\n    var c_sz : char(6)\n    var s : string\n    var s_sz : string(6)\n\n    % Different sets\n    type s1 : set of boolean\n    type s2 : set of boolean\n    var as1, as2 : s1\n    var bs1, bs2 : s2\n    var aas : set of boolean\n\n    % should all produce boolean anyway\n    var _v_res : boolean\n\n    _v_res := r not= b\n    _v_res := r not= c\n    _v_res := r not= c_sz\n    _v_res := r not= s\n    _v_res := r not= s_sz\n\n    _v_res := i not= b\n    _v_res := i not= c\n    _v_res := i not= c_sz\n    _v_res := i not= s\n    _v_res := i not= s_sz\n\n    _v_res := n not= b\n    _v_res := n not= c\n    _v_res := n not= c_sz\n    _v_res := n not= s\n    _v_res := n not= s_sz\n\n    _v_res := b not= r\n    _v_res := b not= i\n    _v_res := b not= n\n    _v_res := b not= c\n    _v_res := b not= c_sz\n    _v_res := b not= s\n    _v_res := b not= s_sz\n\n    _v_res := c not= r\n    _v_res := c not= i\n    _v_res := c not= n\n    _v_res := c not= b\n\n    _v_res := c_sz not= r\n    _v_res := c_sz not= i\n    _v_res := c_sz not= n\n    _v_res := c_sz not= b\n\n    _v_res := s not= r\n    _v_res := s not= i\n    _v_res := s not= n\n    _v_res := s not= b\n\n    _v_res := s_sz not= r\n    _v_res := s_sz not= i\n    _v_res := s_sz not= n\n    _v_res := s_sz not= b\n\n    % Incompatible sets\n    _v_res := as1 not= bs2\n    _v_res := bs1 not= as2\n    _v_res := aas not= as1\n    _v_res := as1 not= aas\n    "
---
"r"@"src/main.t:24..25" [ConstVar(Var, No)]: real
"i"@"src/main.t:41..42" [ConstVar(Var, No)]: int
"n"@"src/main.t:57..58" [ConstVar(Var, No)]: nat
"b"@"src/main.t:94..95" [ConstVar(Var, No)]: boolean
"c"@"src/main.t:136..137" [ConstVar(Var, No)]: char
"c_sz"@"src/main.t:153..157" [ConstVar(Var, No)]: char_n Fixed(Unevaluated(PackageId(3072), BodyId(0)))
"s"@"src/main.t:176..177" [ConstVar(Var, No)]: string
"s_sz"@"src/main.t:195..199" [ConstVar(Var, No)]: string_n Fixed(Unevaluated(PackageId(3072), BodyId(1)))
"s1"@"src/main.t:243..245" [Type]: set[DefId(PackageId(3072), LocalDefId(9))] of boolean
"s1"@"src/main.t:248..262" [Set]: <error>
"s2"@"src/main.t:272..274" [Type]: set[DefId(PackageId(3072), LocalDefId(11))] of boolean
"s2"@"src/main.t:277..291" [Set]: <error>
"as1"@"src/main.t:300..303" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(9))] of boolean
"as2"@"src/main.t:305..308" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(9))] of boolean
"bs1"@"src/main.t:322..325" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(11))] of boolean
"bs2"@"src/main.t:327..330" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(11))] of boolean
"aas"@"src/main.t:344..347" [ConstVar(Var, No)]: set[DefId(PackageId(3072), LocalDefId(17))] of boolean
"<anonymous>"@"src/main.t:350..364" [Set]: <error>
"_v_res"@"src/main.t:414..420" [ConstVar(Var, No)]: boolean
"<root>"@"<unknown>:0..0" [Module(No)]: <error>

error at src/main.t:448..452: mismatched types for `not =`
| note for src/main.t:453..454: this is of type `boolean`
| note for src/main.t:446..447: this is of type `real`
| error for src/main.t:448..452: `real` cannot be compared to `boolean`
| info: operands must both be the same type
error at src/main.t:471..475: mismatched types for `not =`
| note for src/main.t:476..477: this is of type `char`
| note for src/main.t:469..470: this is of type `real`
| error for src/main.t:471..475: `real` cannot be compared to `char`
| info: operands must both be the same type
error at src/main.t:494..498: mismatched types for `not =`
| note for src/main.t:499..503: this is of type `char(6)`
| note for src/main.t:492..493: this is of type `real`
| error for src/main.t:494..498: `real` cannot be compared to `char(6)`
| info: operands must both be the same type
error at src/main.t:520..524: mismatched types for `not =`
| note for src/main.t:525..526: this is of type `string`
| note for src/main.t:518..519: this is of type `real`
| error for src/main.t:520..524: `real` cannot be compared to `string`
| info: operands must both be the same type
error at src/main.t:543..547: mismatched types for `not =`
| note for src/main.t:548..552: this is of type `string(6)`
| note for src/main.t:541..542: this is of type `real`
| error for src/main.t:543..547: `real` cannot be compared to `string(6)`
| info: operands must both be the same type
error at src/main.t:570..574: mismatched types for `not =`
| note for src/main.t:575..576: this is of type `boolean`
| note for src/main.t:568..569: this is of type `int`
| error for src/main.t:570..574: `int` cannot be compared to `boolean`
| info: operands must both be the same type
error at src/main.t:593..597: mismatched types for `not =`
| note for src/main.t:598..599: this is of type `char`
| note for src/main.t:591..592: this is of type `int`
| error for src/main.t:593..597: `int` cannot be compared to `char`
| info: operands must both be the same type
error at src/main.t:616..620: mismatched types for `not =`
| note for src/main.t:621..625: this is of type `char(6)`
| note for src/main.t:614..615: this is of type `int`
| error for src/main.t:616..620: `int` cannot be compared to `char(6)`
| info: operands must both be the same type
error at src/main.t:642..646: mismatched types for `not =`
| note for src/main.t:647..648: this is of type `string`
| note for src/main.t:640..641: this is of type `int`
| error for src/main.t:642..646: `int` cannot be compared to `string`
| info: operands must both be the same type
error at src/main.t:665..669: mismatched types for `not =`
| note for src/main.t:670..674: this is of type `string(6)`
| note for src/main.t:663..664: this is of type `int`
| error for src/main.t:665..669: `int` cannot be compared to `string(6)`
| info: operands must both be the same type
error at src/main.t:692..696: mismatched types for `not =`
| note for src/main.t:697..698: this is of type `boolean`
| note for src/main.t:690..691: this is of type `nat`
| error for src/main.t:692..696: `nat` cannot be compared to `boolean`
| info: operands must both be the same type
error at src/main.t:715..719: mismatched types for `not =`
| note for src/main.t:720..721: this is of type `char`
| note for src/main.t:713..714: this is of type `nat`
| error for src/main.t:715..719: `nat` cannot be compared to `char`
| info: operands must both be the same type
error at src/main.t:738..742: mismatched types for `not =`
| note for src/main.t:743..747: this is of type `char(6)`
| note for src/main.t:736..737: this is of type `nat`
| error for src/main.t:738..742: `nat` cannot be compared to `char(6)`
| info: operands must both be the same type
error at src/main.t:764..768: mismatched types for `not =`
| note for src/main.t:769..770: this is of type `string`
| note for src/main.t:762..763: this is of type `nat`
| error for src/main.t:764..768: `nat` cannot be compared to `string`
| info: operands must both be the same type
error at src/main.t:787..791: mismatched types for `not =`
| note for src/main.t:792..796: this is of type `string(6)`
| note for src/main.t:785..786: this is of type `nat`
| error for src/main.t:787..791: `nat` cannot be compared to `string(6)`
| info: operands must both be the same type
error at src/main.t:814..818: mismatched types for `not =`
| note for src/main.t:819..820: this is of type `real`
| note for src/main.t:812..813: this is of type `boolean`
| error for src/main.t:814..818: `boolean` cannot be compared to `real`
| info: operands must both be the same type
error at src/main.t:837..841: mismatched types for `not =`
| note for src/main.t:842..843: this is of type `int`
| note for src/main.t:835..836: this is of type `boolean`
| error for src/main.t:837..841: `boolean` cannot be compared to `int`
| info: operands must both be the same type
error at src/main.t:860..864: mismatched types for `not =`
| note for src/main.t:865..866: this is of type `nat`
| note for src/main.t:858..859: this is of type `boolean`
| error for src/main.t:860..864: `boolean` cannot be compared to `nat`
| info: operands must both be the same type
error at src/main.t:883..887: mismatched types for `not =`
| note for src/main.t:888..889: this is of type `char`
| note for src/main.t:881..882: this is of type `boolean`
| error for src/main.t:883..887: `boolean` cannot be compared to `char`
| info: operands must both be the same type
error at src/main.t:906..910: mismatched types for `not =`
| note for src/main.t:911..915: this is of type `char(6)`
| note for src/main.t:904..905: this is of type `boolean`
| error for src/main.t:906..910: `boolean` cannot be compared to `char(6)`
| info: operands must both be the same type
error at src/main.t:932..936: mismatched types for `not =`
| note for src/main.t:937..938: this is of type `string`
| note for src/main.t:930..931: this is of type `boolean`
| error for src/main.t:932..936: `boolean` cannot be compared to `string`
| info: operands must both be the same type
error at src/main.t:955..959: mismatched types for `not =`
| note for src/main.t:960..964: this is of type `string(6)`
| note for src/main.t:953..954: this is of type `boolean`
| error for src/main.t:955..959: `boolean` cannot be compared to `string(6)`
| info: operands must both be the same type
error at src/main.t:982..986: mismatched types for `not =`
| note for src/main.t:987..988: this is of type `real`
| note for src/main.t:980..981: this is of type `char`
| error for src/main.t:982..986: `char` cannot be compared to `real`
| info: operands must both be the same type
error at src/main.t:1005..1009: mismatched types for `not =`
| note for src/main.t:1010..1011: this is of type `int`
| note for src/main.t:1003..1004: this is of type `char`
| error for src/main.t:1005..1009: `char` cannot be compared to `int`
| info: operands must both be the same type
error at src/main.t:1028..1032: mismatched types for `not =`
| note for src/main.t:1033..1034: this is of type `nat`
| note for src/main.t:1026..1027: this is of type `char`
| error for src/main.t:1028..1032: `char` cannot be compared to `nat`
| info: operands must both be the same type
error at src/main.t:1051..1055: mismatched types for `not =`
| note for src/main.t:1056..1057: this is of type `boolean`
| note for src/main.t:1049..1050: this is of type `char`
| error for src/main.t:1051..1055: `char` cannot be compared to `boolean`
| info: operands must both be the same type
error at src/main.t:1078..1082: mismatched types for `not =`
| note for src/main.t:1083..1084: this is of type `real`
| note for src/main.t:1073..1077: this is of type `char(6)`
| error for src/main.t:1078..1082: `char(6)` cannot be compared to `real`
| info: operands must both be the same type
error at src/main.t:1104..1108: mismatched types for `not =`
| note for src/main.t:1109..1110: this is of type `int`
| note for src/main.t:1099..1103: this is of type `char(6)`
| error for src/main.t:1104..1108: `char(6)` cannot be compared to `int`
| info: operands must both be the same type
error at src/main.t:1130..1134: mismatched types for `not =`
| note for src/main.t:1135..1136: this is of type `nat`
| note for src/main.t:1125..1129: this is of type `char(6)`
| error for src/main.t:1130..1134: `char(6)` cannot be compared to `nat`
| info: operands must both be the same type
error at src/main.t:1156..1160: mismatched types for `not =`
| note for src/main.t:1161..1162: this is of type `boolean`
| note for src/main.t:1151..1155: this is of type `char(6)`
| error for src/main.t:1156..1160: `char(6)` cannot be compared to `boolean`
| info: operands must both be the same type
error at src/main.t:1180..1184: mismatched types for `not =`
| note for src/main.t:1185..1186: this is of type `real`
| note for src/main.t:1178..1179: this is of type `string`
| error for src/main.t:1180..1184: `string` cannot be compared to `real`
| info: operands must both be the same type
error at src/main.t:1203..1207: mismatched types for `not =`
| note for src/main.t:1208..1209: this is of type `int`
| note for src/main.t:1201..1202: this is of type `string`
| error for src/main.t:1203..1207: `string` cannot be compared to `int`
| info: operands must both be the same type
error at src/main.t:1226..1230: mismatched types for `not =`
| note for src/main.t:1231..1232: this is of type `nat`
| note for src/main.t:1224..1225: this is of type `string`
| error for src/main.t:1226..1230: `string` cannot be compared to `nat`
| info: operands must both be the same type
error at src/main.t:1249..1253: mismatched types for `not =`
| note for src/main.t:1254..1255: this is of type `boolean`
| note for src/main.t:1247..1248: this is of type `string`
| error for src/main.t:1249..1253: `string` cannot be compared to `boolean`
| info: operands must both be the same type
error at src/main.t:1276..1280: mismatched types for `not =`
| note for src/main.t:1281..1282: this is of type `real`
| note for src/main.t:1271..1275: this is of type `string(6)`
| error for src/main.t:1276..1280: `string(6)` cannot be compared to `real`
| info: operands must both be the same type
error at src/main.t:1302..1306: mismatched types for `not =`
| note for src/main.t:1307..1308: this is of type `int`
| note for src/main.t:1297..1301: this is of type `string(6)`
| error for src/main.t:1302..1306: `string(6)` cannot be compared to `int`
| info: operands must both be the same type
error at src/main.t:1328..1332: mismatched types for `not =`
| note for src/main.t:1333..1334: this is of type `nat`
| note for src/main.t:1323..1327: this is of type `string(6)`
| error for src/main.t:1328..1332: `string(6)` cannot be compared to `nat`
| info: operands must both be the same type
error at src/main.t:1354..1358: mismatched types for `not =`
| note for src/main.t:1359..1360: this is of type `boolean`
| note for src/main.t:1349..1353: this is of type `string(6)`
| error for src/main.t:1354..1358: `string(6)` cannot be compared to `boolean`
| info: operands must both be the same type
error at src/main.t:1404..1408: mismatched types for `not =`
| note for src/main.t:1409..1412: this is of type `set s2 (of boolean)`
| note for src/main.t:1400..1403: this is of type `set s1 (of boolean)`
| error for src/main.t:1404..1408: `set s1 (of boolean)` cannot be compared to `set s2 (of boolean)`
| info: operands must both be the same type
error at src/main.t:1431..1435: mismatched types for `not =`
| note for src/main.t:1436..1439: this is of type `set s1 (of boolean)`
| note for src/main.t:1427..1430: this is of type `set s2 (of boolean)`
| error for src/main.t:1431..1435: `set s2 (of boolean)` cannot be compared to `set s1 (of boolean)`
| info: operands must both be the same type
error at src/main.t:1458..1462: mismatched types for `not =`
| note for src/main.t:1463..1466: this is of type `set s1 (of boolean)`
| note for src/main.t:1454..1457: this is of type `set <anonymous> (of boolean)`
| error for src/main.t:1458..1462: `set <anonymous> (of boolean)` cannot be compared to `set s1 (of boolean)`
| info: operands must both be the same type
error at src/main.t:1485..1489: mismatched types for `not =`
| note for src/main.t:1490..1493: this is of type `set <anonymous> (of boolean)`
| note for src/main.t:1481..1484: this is of type `set s1 (of boolean)`
| error for src/main.t:1485..1489: `set s1 (of boolean)` cannot be compared to `set <anonymous> (of boolean)`
| info: operands must both be the same type
